--- a/src/renderer/components/ProjFunc/Console.css
+++ b/src/renderer/components/ProjFunc/Console.css
@@ -1,7 +1,7 @@
 .console{
 	display: flex;
 	background-color: #fff;
-	height: 50px;
+	height: 100px;
 	box-shadow: inset 0 1px 0 #d4d4d4;
 	padding: 5px 10px;
 	overflow-y: auto;
@@ -10,16 +10,17 @@
 .btn-grp{
 	flex: 1;
 	max-width: 60px;
+	padding: 0 5px 0 0;
 }
 
 .btn{
 	display: block;
-	width: 50px;
-	height: 16px;
+	width: 60px;
+	height: 20px;
 	text-align: center;
-	font-size: 10px;
+	font-size: 12px;
 	line-height: 12px;
-
+	margin: 10px 0;
 	/*line-height: 40px;*/
 }
 
@@ -28,4 +29,5 @@
 	word-break: break-all;
 	line-height: 16px;
 	border-left: 1px solid #ddd;
+	padding: 10px;
 }
